--- a/Assignment-3-Data-Formats/Assignment-3-Data-Formats.csproj
+++ b/Assignment-3-Data-Formats/Assignment-3-Data-Formats.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="EPPlus" Version="7.1.0" />
+  </ItemGroup>
 </Project>
